force-app/main/default/objects/ConfiguracaoCodigoServicoSAPIENS__mdt/ConfiguracaoCodigoServicoSAPIENS__mdt.object-meta.xml
<CustomObject>
    <description>Configurações para código do serviço na integração de contrato do SAPIENS
Quando há mais de uma linha na empresa a ser Integrada</description>
    <label>Configuração código serviço SAPIENS</label>
    <pluralLabel>Configurações código serviço SAPIENS</pluralLabel>
</CustomObject>