force-app/main/default/objects/ConfiguracaoCodigoServicoSAPIENS__mdt/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <description>Código do serviço na integração de contrato com o SAPIENS</description>
    <inlineHelpText>Código do serviço na integração de contrato com o SAPIENS</inlineHelpText>
    <label>Código</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>