force-app/main/default/objects/ConfiguracaoCodigoServicoSAPIENS__mdt/fields/HoraVoada__c.field-meta.xml
<CustomField>
    <fullName>HoraVoada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A ser marcado caso seja o que representa hora voada e não um produto</description>
    <inlineHelpText>A ser marcado caso seja o que representa hora voada e não um produto</inlineHelpText>
    <label>É Hora Voada?</label>
    <type>Checkbox</type>
</CustomField>