force-app/main/default/objects/ConfiguracaoCodigoServicoSAPIENS__mdt/fields/IdProduto__c.field-meta.xml
<CustomField>
    <fullName>IdProduto__c</fullName>
    <description>Id do produto a ser mapeado para um código</description>
    <inlineHelpText>Id do produto a ser mapeado para um código</inlineHelpText>
    <label>Id do Produto</label>
    <length>20</length>
    <type>Text</type>
</CustomField>