force-app/main/default/objects/ConfiguracaoCodigoServicoSAPIENS__mdt/fields/LinhaPadrao__c.field-meta.xml
<CustomField>
    <fullName>LinhaPadrao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define qual linha recebe o valor caso não encontre um metadado com id do produto do item da medição</description>
    <inlineHelpText>Define qual linha recebe o valor caso não encontre um metadado com id do produto do item da medição</inlineHelpText>
    <label>Linha padrão</label>
    <type>Checkbox</type>
</CustomField>