force-app/main/default/objects/ConfiguracaoCodigoServicoSAPIENS__mdt/fields/NumeroConfiguracao__c.field-meta.xml
<CustomField>
    <fullName>NumeroConfiguracao__c</fullName>
    <description>Número da configuração de código de serviço para integração com SAPIENS</description>
    <inlineHelpText>Número da configuração de código de serviço para integração com SAPIENS</inlineHelpText>
    <label>Número da configuração</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>