force-app/main/default/objects/ConfiguracaoCodigoServicoSAPIENS__mdt/fields/NumeroLinhaConfiguracao__c.field-meta.xml
<CustomField>
    <fullName>NumeroLinhaConfiguracao__c</fullName>
    <description>Como é possível que se agrupo mais de um produto em uma linha este campo serve de referência para indicar quais agrupar</description>
    <inlineHelpText>Como é possível que se agrupo mais de um produto em uma linha este campo serve de referência para indicar quais agrupar</inlineHelpText>
    <label>Número da linha para agrupar serviço</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>