force-app/main/default/objects/ConfiguracaoCodigoServicoSAPIENS__mdt/validationRules/Tem_produto_e_hora_voada.validationRule-meta.xml
<ValidationRule>
    <fullName>Tem_produto_e_hora_voada</fullName>
    <active>true</active>
    <description>Não pode haver um produto e hora voada referenciando o código ao mesmo tempo</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(IdProduto__c)),
				 HoraVoada__c 
)</errorConditionFormula>
    <errorMessage>Não pode haver um produto e hora voada referenciando o código ao mesmo tempo</errorMessage>
</ValidationRule>